# CellTreeQM

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
examples/: partitions_celegans_small_P0.json  train_minimal_example.py
scripts/: README.md  celegans_large_high_level_partition.sh  celegans_large_partially_labeled_leaves.sh  celegans_large_supervised.sh  celegans_mid_high_level_partition.sh  celegans_mid_partially_labeled_leaves.sh  celegans_mid_supervised.sh  celegans_small_high_level_partition.sh  celegans_small_partially_labeled_leaves.sh  celegans_small_supervised.sh  collect_results.py  grid_run.sh
src/celltreeqm/: __init__.py  cli.py  trainer.py
src/celltreeqm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/celltreeqm/layers/: __init__.py  feature_gates.py
src/celltreeqm/losses/: __init__.py  loss.py
src/celltreeqm/models/: __init__.py  celltreeqm_attention.py
src/celltreeqm/utils/: quartet_utils.py  utils.py
tests/: test_smoke.py
